// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostTags - Snapshots > matches snapshot with different postId 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden gap-2 lg:flex"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row flex-wrap gap-2 lg:flex-col lg:pt-2"
  >
    <div
      class="flex h-6 cursor-pointer items-center gap-1 border-dashed transition-opacity hover:opacity-80 lg:hidden"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SinglePostTags - Snapshots > matches snapshot with many taggers 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden gap-2 lg:flex"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row flex-wrap gap-2 lg:flex-col lg:pt-2"
  >
    <div
      class="flex flex-row items-center gap-2"
    >
      <div
        class="flex cursor-pointer items-center gap-1 transition-opacity hover:opacity-80"
        data-testid="badge"
        data-variant="default"
      >
        react
        <span
          class="opacity-70"
          data-size="sm"
          data-testid="typography"
        >
          8
        </span>
      </div>
      <button
        class="hidden h-8 w-8 rounded-full p-0 lg:flex"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </button>
      <div
        class="hidden items-center -space-x-2 lg:flex"
      >
        <a
          class="relative"
          data-testid="link"
          href="/profile/user1"
          style="z-index: 10; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user2"
          style="z-index: 11; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user3"
          style="z-index: 12; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user4"
          style="z-index: 13; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user5"
          style="z-index: 14; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <div
          class="flex h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-black text-xs font-medium text-white transition-opacity hover:opacity-80"
          style="z-index: 15;"
        >
          +
          3
        </div>
      </div>
    </div>
    <div
      class="flex h-6 cursor-pointer items-center gap-1 border-dashed transition-opacity hover:opacity-80 lg:hidden"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SinglePostTags - Snapshots > matches snapshot with no tags 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden gap-2 lg:flex"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row flex-wrap gap-2 lg:flex-col lg:pt-2"
  >
    <div
      class="flex h-6 cursor-pointer items-center gap-1 border-dashed transition-opacity hover:opacity-80 lg:hidden"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SinglePostTags - Snapshots > matches snapshot with tags 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden gap-2 lg:flex"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row flex-wrap gap-2 lg:flex-col lg:pt-2"
  >
    <div
      class="flex flex-row items-center gap-2"
    >
      <div
        class="flex cursor-pointer items-center gap-1 transition-opacity hover:opacity-80"
        data-testid="badge"
        data-variant="default"
      >
        react
        <span
          class="opacity-70"
          data-size="sm"
          data-testid="typography"
        >
          3
        </span>
      </div>
      <button
        class="hidden h-8 w-8 rounded-full p-0 lg:flex"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </button>
      <div
        class="hidden items-center -space-x-2 lg:flex"
      >
        <a
          class="relative"
          data-testid="link"
          href="/profile/user1"
          style="z-index: 10; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user2"
          style="z-index: 11; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user3"
          style="z-index: 12; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="flex flex-row items-center gap-2"
    >
      <div
        class="flex cursor-pointer items-center gap-1 transition-opacity hover:opacity-80"
        data-testid="badge"
        data-variant="secondary"
      >
        javascript
        <span
          class="opacity-70"
          data-size="sm"
          data-testid="typography"
        >
          1
        </span>
      </div>
      <button
        class="hidden h-8 w-8 rounded-full p-0 lg:flex"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </button>
      <div
        class="hidden items-center -space-x-2 lg:flex"
      >
        <a
          class="relative"
          data-testid="link"
          href="/profile/user4"
          style="z-index: 10; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="h-8 w-8 cursor-pointer transition-opacity hover:opacity-80"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="flex h-6 cursor-pointer items-center gap-1 border-dashed transition-opacity hover:opacity-80 lg:hidden"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;
